//! https://github.com/stepancheg/rust-protobuf
//! protoc --rust_out . proto.proto

syntax = "proto3";

package proto;


enum VmMethod {
  V_TEST = 0;
  V_HTTP = 1;
}

enum WasmMethod {
  W_TEST = 0;
  W_HTTP = 1;
}

enum HttpMethod {
  GET = 0;
  HEAD = 1;
  POST = 2;
  PUT = 3;
  DELETE = 4;
  CONNECT = 5;
  OPTIONS = 6;
  TRACE = 7;
  PATCH = 8;
}

message HttpRequest {
  string url = 1;
  HttpMethod method = 2;
  map<string, string> headers = 3;
  bytes body = 4;
}

message HttpResponse {
  int32 status = 1;
  map<string, string> headers = 2;
  bytes body = 3;
}

